# sip2026

./: CHANGELOG.md  README.md  TP0.md  TP1.md  TP2.md  TP3-1.md  TP3-2.md  TP3-3.md  TP3-4.md  TP3.md  blockchain-clase-1-tarea.html  blockchain-clase-1-tarea.md  blockchain-clase-1.html  blockchain-clase-1.md  blockchain-clase-2-tarea.html  blockchain-clase-2-tarea.md  blockchain-clase-2.html  blockchain-clase-2.md  blockchain-clase-3-tarea.html  blockchain-clase-3-tarea.md  blockchain-clase-3.html  blockchain-clase-3.md  blockchain-clase-4-tarea.html  blockchain-clase-4-tarea.md  blockchain-clase-4.html  blockchain-clase-4.md  blockchain-overview.html  blockchain-overview.md  build.sh  correccion-tp1-parte1.html  index.html  practica-0.html  practica-1-parte-1.html  practica-1-parte-2.html  practica-1.html  practica-2-parte-1.html  practica-2-parte-2.html  practica-2-parte-3.html  practica-2-parte-4.html  practica-2.html  (+18 more)
reference/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
reference/devoluciones/: Contardi.md  G-ONE.md  ProxyTeam.md  Systeam.md
reference/docs/: parte-1-lecciones.md
reference/expected-output/: README.md  bicicleta_rodado_29.json  geforce_5090.json  iphone_16_pro_max.json
reference/hit1/: README.md  main.py
reference/hit2/: README.md  browser_factory.py  main.py
reference/hit3/: README.md  browser_factory.py  filters.py  main.py
reference/hit4/: README.md  browser_factory.py  filters.py  main.py
reference/hit5/: README.md  browser_factory.py  extractors.py  (+3 more)
(+67 files in other folders)
